Add membership and permissions features for WodScore